fix: preserve line breaks in channel dialog descr
Closes https://github.com/deltachat/deltachat-desktop/issues/6470.

--- a/packages/frontend/src/components/ProfileInfoHeader/styles.module.scss
+++ b/packages/frontend/src/components/ProfileInfoHeader/styles.module.scss
@@ -21,6 +21,12 @@
   user-select: text;
 }
 
+.description {
+  // Copy-pasted from `.group-profile-description` and `.statusText`.
+  white-space: pre-wrap;
+  word-break: break-word;
+}
+
 .address {
   color: #565656;
   margin-top: 0.25rem;
